# lol-consultor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py  winrates.json
.github/workflows/: ci.yml  collect-winrates.yml
.streamlit/: config.toml
scripts/: collect_winrates.py  refresh_data.py  run_dash.py
src/lol_consultor/: ability_search.py  assistant.py  cache.py  config.py  draft.py  gamewiki.py  models.py  probability.py  refresh.py  service.py  textutil.py  winrates.py
src/lol_consultor/app/: dash_app.py
src/lol_consultor/app/assets/: dropdown-dark.css  theme-hextech.css
src/lol_consultor/app/pages/: champions.py  chat.py  draft_page.py  items.py  mechanics.py  runes.py
src/lol_consultor/connectors/: ddragon.py  fandom_wiki.py  lol_wiki.py  opgg_meta.py  riot_api.py
src/lol_consultor/streamlit_ui/: __init__.py  champions.py  chat.py  draft.py  items.py  mechanics.py  runes.py  shared.py
tests/: conftest.py  test_ability_search.py  test_assistant.py  test_cache.py  test_dash_app.py  test_ddragon.py  test_draft.py  test_fandom_wiki.py  test_gamewiki.py  test_lol_wiki.py  test_opgg_meta.py  test_probability.py  test_refresh.py  test_service.py  test_textutil.py  test_winrates.py
