[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-consultor"
version = "0.1.0"
description = "Interfaz de consulta de campeones, items, runas, builds y counters de League of Legends"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.22",
    "streamlit>=1.40",
    "opgg.py>=2.0.4",
    "ollama>=0.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false

# No seguir a los stubs de librerías pesadas de terceros (streamlit arrastra
# numpy/pandas, cuyos .pyi usan sintaxis que rompe el chequeo de nuestro código).
[[tool.mypy.overrides]]
module = ["streamlit.*", "numpy.*", "pandas.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
